cluster/apps/shared/ingress/headscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-api
  namespace: other
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - headscale.rcrumana.xyz
      secretName: headscale-rcrumana-xyz-tls
  rules:
    - host: headscale.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ui
  namespace: other
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8,100.64.0.0/10"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - headscale.rcrumana.xyz
      secretName: headscale-rcrumana-xyz-tls
  rules:
    - host: headscale.rcrumana.xyz
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: headscale-ui
                port:
                  number: 80
