cluster/apps/shared/ingress/homepage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: productivity
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    gethomepage.dev/description: "Cluster dashboard"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Dashboard"
    gethomepage.dev/icon: "homepage.png"
    gethomepage.dev/name: "Homepage"
    haproxy-ingress.github.io/affinity: "cookie"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/session-cookie-domain: "dash.rcrumana.xyz"
    haproxy-ingress.github.io/session-cookie-name: "homepage"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - dash.rcrumana.xyz
      secretName: dash-rcrumana-xyz-tls
  rules:
    - host: dash.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
