cluster/apps/shared/ingress/hypermind.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hypermind
  namespace: other
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - hypermind.rcrumana.xyz
      secretName: hypermind-rcrumana-xyz-tls
  rules:
    - host: hypermind.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hypermind
                port:
                  number: 80
