cluster/apps/shared/ingress/nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: productivity
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "3600s"
    haproxy-ingress.github.io/timeout-server: "3600s"
    haproxy-ingress.github.io/proxy-body-size: "0"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - nextcloud.k8s.rcrumana.xyz
      secretName: nextcloud-k8s-rcrumana-xyz-tls
  rules:
    - host: nextcloud.k8s.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
