cluster/apps/shared/ingress/opnsense.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-proxy
  namespace: other
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "h1-ssl"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - router.k8s.rcrumana.xyz
      secretName: router-k8s-rcrumana-xyz-tls
  rules:
    - host: router.k8s.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opnsense-https
                port:
                  number: 4443
